# web_django_shop

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/management/commands/: create_blog_group.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: initial_data.json
catalog/management/commands/: load_test_data.py  setup_groups.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py
catalog/templates/catalog/: add_product.html  base.html  category_products.html  contacts.html  home.html  main_menu.html  product_confirm_delete.html  product_create.html  product_detail.html  product_update.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile_edit.html  register.html
web_django_shop/: asgi.py  settings.py  urls.py  wsgi.py
