[tool.poetry]
name = "web-django-shop"
version = "0.1.0"
description = ""
authors = ["Karateev <karateev.92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
python-dotenv = "^1.1.0"
django-redis = "^5.4.0"
redis = "^6.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
